# meningsbyggaren

./: README.md  pyproject.toml  se.danielnylander.meningsbyggaren.desktop
.tx/: config
po/: meningsbyggaren.pot  sv.mo  sv.po
src/meningsbyggaren/: main.py
