[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "meningsbyggaren"
version = "0.1.0"
description = "Build sentences with symbols for children with language disorders"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]
[project.gui-scripts]
meningsbyggaren = "meningsbyggaren.main:main"
[tool.setuptools.packages.find]
where = ["src"]
